<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/top_tools"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/my_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            android:src="@mipmap/home_message" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/my_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">

                <com.android.yzd.ui.view.CircleImageView
                    android:id="@+id/my_head"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginTop="20dp"
                    android:src="@drawable/head"
                    app:border_color="@color/edit_background"
                    app:border_width="3dp" />


                <TextView
                    android:id="@+id/my_nick"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/my_head"
                    android:layout_marginTop="5dp"
                    android:layout_toRightOf="@+id/my_head"
                    android:text="昵称"
                    android:textColor="@android:color/white"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/my_tel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/my_head"
                    android:layout_marginBottom="5dp"
                    android:layout_toRightOf="@+id/my_head"
                    android:drawableLeft="@mipmap/phone"
                    android:drawablePadding="10dp"
                    android:text="15911982121"
                    android:textColor="@android:color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dp"
                    android:src="@mipmap/more_white" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="1px"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/discount_coupon"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/discount_coupon"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/discount_coupon"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/white" />

                <LinearLayout
                    android:id="@+id/my_collect"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@mipmap/collect"
                        android:drawablePadding="10dp"
                        android:gravity="center"
                        android:text="@string/collect"
                        android:textColor="@android:color/white"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:drawableLeft="@mipmap/my_order"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:text="@string/my_order"
                    android:textColor="@color/black_30"
                    android:textSize="14sp" />


                <TextView
                    android:id="@+id/my_allOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawablePadding="10dp"
                    android:drawableRight="@mipmap/more"
                    android:padding="10dp"
                    android:text="@string/my_all_order"
                    android:textColor="@color/black_90"
                    android:textSize="12sp" />

            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:background="@android:color/white"
                android:padding="5dp">

                <TextView
                    android:id="@+id/my_wait_pay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@mipmap/my_wait_pay"
                    android:gravity="center"
                    android:text="@string/my_wait_pay"
                    android:textColor="@color/black_60"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/my_wait_delivery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@mipmap/my_wait_delivery"
                    android:gravity="center"
                    android:text="@string/my_wait_delivery"
                    android:textColor="@color/black_60"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/my_wait_getGoods"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@mipmap/my_wait_getgoods"
                    android:gravity="center"
                    android:text="@string/my_wait_getGoods"
                    android:textColor="@color/black_60"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/my_accomplish"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:drawableTop="@mipmap/my_accomplish"
                    android:gravity="center"
                    android:text="@string/my_accomplish"
                    android:textColor="@color/black_60"
                    android:textSize="12sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/my_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableLeft="@mipmap/my_wallet"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/my_wallet"
                    android:textColor="@color/black_30"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@color/background" />

                <TextView
                    android:id="@+id/my_shopping_mall_store"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableLeft="@mipmap/mall_store"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/my_shopping_mall_store"
                    android:textColor="@color/black_30"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginLeft="15dp"
                    android:background="@color/background" />

                <TextView
                    android:id="@+id/bank_card"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:drawableLeft="@mipmap/bank_card"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    android:text="@string/bank_card"
                    android:textColor="@color/black_30"
                    android:textSize="14sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/address_manage"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:drawableLeft="@mipmap/address_manage"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/address_manage"
                android:textColor="@color/black_30"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/my_setting"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/white"
                android:drawableLeft="@mipmap/set"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/setting"
                android:textColor="@color/black_30"
                android:textSize="14sp" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>
